[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/End.gd" type="Script" id=1]

[node name="End" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 510, 300 )

[node name="ClosingLabel" type="Label" parent="." groups=[
"hideOnStart",
]]
margin_left = 10.0
margin_top = 10.0
margin_right = 234.0
margin_bottom = 27.0
text = "Closing terminal session...."

[node name="SessionTimeLabel" type="Label" parent="." groups=[
"hideOnStart",
]]
margin_left = 10.0
margin_top = 30.0
margin_right = 114.0
margin_bottom = 47.0
text = "Session time:"

[node name="DeathLabel" type="Label" parent="." groups=[
"hideOnStart",
]]
margin_left = 10.0
margin_top = 50.0
margin_right = 210.0
margin_bottom = 67.0
text = "Fatal errors encountered:"

[node name="DeathCount" type="Label" parent="." groups=[
"hideOnStart",
]]
margin_left = 210.0
margin_top = 50.0
margin_right = 310.0
margin_bottom = 67.0

[node name="EndedLabel" type="Label" parent="." groups=[
"hideOnStart",
]]
margin_left = 10.0
margin_top = 70.0
margin_right = 210.0
margin_bottom = 87.0
text = "Terminal session ended..."

[node name="SessionTime" type="Label" parent="." groups=[
"hideOnStart",
]]
margin_left = 114.0
margin_top = 30.0
margin_right = 350.0
margin_bottom = 47.0

[node name="Thanks" type="Label" parent="." groups=[
"hideOnStart",
]]
margin_left = 10.0
margin_top = 120.0
margin_right = 500.0
margin_bottom = 137.0
text = "Created by jaydubbyasee for Ludum Dare 45...Thanks for playing <3"

[node name="PromptLabel" type="Label" parent="." groups=[
"hideOnStart",
]]
margin_left = 10.0
margin_top = 160.0
margin_right = 402.0
margin_bottom = 177.0
text = "Close application or press any key to continue..."

[node name="LaunchingLabel" type="Label" parent="." groups=[
"hideOnStart",
]]
margin_left = 10.0
margin_top = 180.0
margin_right = 266.0
margin_bottom = 197.0
text = "Starting new terminal session..."

[node name="BootTimer" type="Timer" parent="."]
one_shot = true

[node name="InputLockoutTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="TextTimer1" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="TextTimer2" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="TextTimer3" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="TextTimer4" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true
[connection signal="timeout" from="BootTimer" to="." method="_on_BootTimer_timeout"]
[connection signal="timeout" from="InputLockoutTimer" to="." method="_on_InputLockoutTimer_timeout"]
[connection signal="timeout" from="TextTimer1" to="." method="_on_TextTimer1_timeout"]
[connection signal="timeout" from="TextTimer2" to="." method="_on_TextTimer2_timeout"]
[connection signal="timeout" from="TextTimer3" to="." method="_on_TextTimer3_timeout"]
[connection signal="timeout" from="TextTimer4" to="." method="_on_TextTimer4_timeout"]
